# tensorflow-cpp-op-example

./: CMakeLists.txt  _inner_product_grad.py  inner_product_tests.py  short_exp1.py  simple_exp1.py
